adding to listPast function

--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ html {
     padding: 1rem;
 }
 
-.search {
+.search-div {
     padding-left: 0.5rem;
     width: 26%;
     /* border: 2px black solid; */
